    CHANGES ACCEPTED;
NEXT:
    change in Dquote for norminette;
*---> Status ^^^^
    Accepted kan wa7d lblan khfif f return mekhtalf bin mnin kanl9a chi ENV_VAR olla 
    mnin matatkonch
Begin : Today : 26 - 12:13
Goals : syntax error caused by all type of redirection
*-----> CHECKED <<<
    Add in line 45 of ysntax error but norminette error.
*----->
True changes : 
    reimplementation of redirection check case like :"ls >| wc -l";

NOW_ITS TIME FOR pipe syntaxe error :
PIPE:
	- left: [WSPACE] (STRING)
	- right: [WSPACE](STRING | REDIRECT)
fih Maydar :
        STOP :23:54;
    {
        creat pipe look for behind;
        forward THEN if some on o f them EQUAL null return (ERROR_EXIT)
        si non consulter autre condition;
    }
BEGIN : 13 : 06;
STOP : 22 : 43: Had nhar bedat madert fih ta9elwa ;
BEGIN after one day : 12 : 03 29/09:

==>|when I get status I should replace it by it's valu|
find error and handle it : echo "$" should be echo A_SPACE WORD
so I add && command[j + 1] != '\"';

I should handl cas of expansion should n't expand << "$PATH" || << $PATH 


****---------->
GOOD DAAAY. STOP : 20:15 begin -> 9:00 : 11H

TO do : 
circul in list if I find >| I remove '|';
reform the case likke : < infile cmd(WORD) option(word) '|(OPER)'
recheck ki kanlga cmd,
add syntaxe reformer the check the case >| : succes
file detection  cmd detection : succes;
/********** new mission :
echo implementation;
and exit;
/********************Begin : BUILT-IN***********************/
    /---->> OBJ : BUILT-IN COMMAND----\
cd : use function in test understand it;

/***************************************************************
/***************************************************************
                    |TO_CHECK MNBE3D|
                    -----------------
LEAK : if the variable don't exist in env ->I return duped("");
but chi blan tma;
ft_strndup don't alloc when to_dup = '\0';
GO TO SLEEP  00:00
/***************************************************************/