@@ -6,13 +6,15 @@
 /*   By: abait-ta <abait-ta@student.1337.ma >       +#+  +:+       +#+        */
 /*                                                +#+#+#+#+#+   +#+           */
 /*   Created: 2023/10/08 13:14:38 by abait-ta          #+#    #+#             */
-/*   Updated: 2023/10/08 13:23:21 by abait-ta         ###   ########.fr       */
+/*   Updated: 2023/10/11 20:41:21 by abait-ta         ###   ########.fr       */
 /*                                                                            */
 /* ************************************************************************** */
 
 #include "../Header/Parsing.h"
 
-void    e()
-{
-    printf("a");
-}
+// int    run_unset(char **cmd_table, t_my_env **env)
+// {
+    
+    
+//     return (0);
+// }
