@@ -6,7 +6,7 @@
 /*   By: abait-ta <abait-ta@student.1337.ma >       +#+  +:+       +#+        */
 /*                                                +#+#+#+#+#+   +#+           */
 /*   Created: 2023/09/02 23:58:04 by abait-ta          #+#    #+#             */
-/*   Updated: 2023/10/10 21:29:13 by abait-ta         ###   ########.fr       */
+/*   Updated: 2023/10/11 21:00:07 by abait-ta         ###   ########.fr       */
 /*                                                                            */
 /* ************************************************************************** */
 
@@ -16,11 +16,6 @@
 int		g_exit_status = 0;
 /*****************************************/
 
-void	status_setter(int status)
-{
-	g_exit_status = status;
-}
-
 void	seg_handler_c(int sigstatus)
 {
 	(void)(sigstatus);
@@ -28,20 +23,6 @@ void	seg_handler_c(int sigstatus)
 	rl_on_new_line();
 	rl_replace_line("", 0);
 	rl_redisplay();
-}
-
-void	white_space(char *str, size_t i, size_t len, int *state)
-{
-	*state = 0;
-	if (i >= len || *state == 1)
-		return ;
-	if (str[i] == ' ' || str[i] == '\t')
-		white_space(str, i + 1, len, state);
-	else
-	{
-		*state = 1;
-		return ;
-	}
 }
 
 void	history_acces(char *commande)
@@ -70,7 +51,7 @@ char	*get_input_line(char *commande)
 	return (commande);
 }
 
-int	free_cmd_table(t_cmd_table **cmd)
+/*
 {
 	t_cmd_table	*tmp;
 
@@ -89,13 +70,7 @@ int	free_cmd_table(t_cmd_table **cmd)
 	}
 	*cmd = NULL;
 	return (1);
-}
-
-void	clean_memory(t_token_list **token, char *command)
-{
-	free_token_list(token);
-	free(command);
-}
+}*/
 
 void	print_flag(t_my_env **emv)
 {
@@ -117,10 +92,9 @@ int	minishell(int ac, char **av, char **env)
 	t_commande		commande;
 	t_token_list	*token;
 	t_my_env		*my_env;
-	t_cmd		*cmd_syntax;
+	t_cmd			*cmd_syntax;
 
-	(void)ac;
-	(void)av;
+	(void)ac; (void)av;
 	signal(SIGINT, seg_handler_c);
 	cmd_syntax = NULL;
 	my_env = import_env(env);
@@ -130,15 +104,15 @@ int	minishell(int ac, char **av, char **env)
 		token = lexical_analysis(commande.commande, &my_env);
 		if (syntax_error(token) == SUCCES_PROC)
 		{
-			/*HENNA MNIIIN ATBDA NTA LEE3B*/
 			cmd_syntax = parsing(&token);
-			print_flag(&my_env);
-			printf ("=================\n");
-			char *cmd[]= {"cd", NULL};
+			// printcmd_list(&cmd_syntax);
+			// print_flag(&my_env);
+			// printf ("=================\n");
+			char *cmd[]= {"exit", NULL};
 			builtin_recognizer(cmd, &my_env);
-			printf ("=================\n");
-			print_flag(&my_env);
-			// printf ("\n=========stat :%d========\n", g_exit_status);
+			// printf ("=================\n");
+			// print_flag(&my_env);
+			// // printf ("\n=========stat :%d========\n", g_exit_status);
 			free_cmd(&cmd_syntax);
 			clean_memory(&token, commande.commande);
 		}
@@ -157,3 +131,4 @@ int	main(int ac, char **av, char **env)
 	minishell(ac, av, env);
 	return (SUCCES_PROC);
 }
+
