@@ -1,0 +1,39 @@
+/* ************************************************************************** */
+/*                                                                            */
+/*                                                        :::      ::::::::   */
+/*   Global_outfunc.c                                   :+:      :+:    :+:   */
+/*                                                    +:+ +:+         +:+     */
+/*   By: abait-ta <abait-ta@student.1337.ma >       +#+  +:+       +#+        */
+/*                                                +#+#+#+#+#+   +#+           */
+/*   Created: 2023/10/11 13:55:20 by abait-ta          #+#    #+#             */
+/*   Updated: 2023/10/11 14:05:31 by abait-ta         ###   ########.fr       */
+/*                                                                            */
+/* ************************************************************************** */
+
+#include "./Header/Parsing.h"
+
+
+void	white_space(char *str, size_t i, size_t len, int *state)
+{
+	*state = 0;
+	if (i >= len || *state == 1)
+		return ;
+	if (str[i] == ' ' || str[i] == '\t')
+		white_space(str, i + 1, len, state);
+	else
+	{
+		*state = 1;
+		return ;
+	}
+}
+
+void	clean_memory(t_token_list **token, char *command)
+{
+	free_token_list(token);
+	free(command);
+}
+
+void	status_setter(int status)
+{
+	g_exit_status = status;
+}
